[package]
name = "chapter-1"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.8"

[[bin]]
name = "echo"
path = "src/echo.rs"
