[package]
name = "chapter-3"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "list-3-1"
path = "src/list-3-1.rs"

[[bin]]
name = "list-3-4"
path = "src/list-3-4.rs"

[[bin]]
name = "list-3-5"
path = "src/list-3-5.rs"

[[bin]]
name = "list-3-6"
path = "src/list-3-6.rs"

[[bin]]
name = "list-3-7"
path = "src/list-3-7.rs"
